--- a/pfe/src/App.css
+++ b/pfe/src/App.css
@@ -3,6 +3,19 @@
   padding: 0;
   margin: 0;
 }
+
+
+button {
+  cursor: pointer;
+}
+
+nav{
+  padding-left: 0em;
+  padding-right:8em;
+}
+
+
+
 .Login,.register{
   height: 100vh;
   display: flex;
@@ -16,16 +29,20 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #19283f;
+  background-color: #fbfdff;
   width:400px ;
-  height: 600px;
+  height: auto;
+  padding-top: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
   border-radius: 20px;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
 }
 .loginform{
   display: flex;
   flex-direction: column;
   width: 300px;
-  color:white;
+  color:rgb(7, 7, 7);
   gap: 30px;
   padding: 5px;
   
@@ -34,7 +51,25 @@ input{
   padding: 5px;
   border-radius: 5px;
   height: 40px;
-  border-color: white;
-  border-width: 0;
-}
+  border-color: rgb(255, 253, 253);
+  border-width: 1px;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
 
+}
+.formatdiv{
+  display:flex;
+  flex-direction: column;
+}
+.custom-select {
+  width: 300px; /* Set width as needed */
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 16px;
+  appearance: none; /* Removes the default dropdown arrow in some browsers */
+  background-color: #fffbfb;
+}
+.display-row{
+  display:flex;
+  flex-direction: row;
+}
